tiff: update to 3.9.4 (#25585, maintainer timeout), add new master_site, remove muniversal, add license, add jbig variant (#25586)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69700 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/tiff/Portfile
+++ b/dports/graphics/tiff/Portfile
@@ -2,13 +2,12 @@
 # $Id$
 
 PortSystem 1.0
-PortGroup  muniversal 1.0
 PortGroup  xcodeversion 1.0
 
 name		tiff
-version		3.9.2
-revision	3
+version		3.9.4
 categories	graphics
+license		BSD
 maintainers	waqar
 description	Library and tools for dealing with Tag Image File Format
 long_description \
@@ -26,16 +25,14 @@ long_description \
 	esoteric portions of the 6.0 TIFF spec.
 homepage	http://www.remotesensing.org/libtiff
 platforms	darwin
-master_sites	ftp://ftp.remotesensing.org/pub/libtiff/ \
+master_sites	http://download.osgeo.org/libtiff/ \
+		ftp://ftp.remotesensing.org/pub/libtiff/ \
 		http://dl.maptools.org/dl/libtiff/ \
 		freebsd
 
-checksums           md5     93e56e421679c591de7552db13384cb8 \
-                    sha1    5c054d31e350e53102221b7760c3700cf70b4327 \
-                    rmd160  22716e0bcee93a654a704900f3e19f41600f3d18
-
-# Turn on OpenGL with --with-apple-opengl-framework.
-patchfiles      patch-configure.diff
+checksums           md5     2006c1bdd12644dbf02956955175afd6 \
+                    sha1    a4e32d55afbbcabd0391a9c89995e8e8a19961de \
+                    rmd160  3e0a74b6294297c16fb983ad68056a1dfbbdb1de
 
 depends_lib	port:jpeg port:zlib
 
@@ -50,6 +47,15 @@ configure.args	--disable-jbig \
 		--with-zlib-include-dir=${prefix}/include \
 		--with-zlib-lib-dir=${prefix}/lib
 
+post-configure {
+    if {[variant_isset universal]} {
+        system "cd ${worksrcpath}/libtiff \
+                && ed - tif_config.h < ${filespath}/libtiff__tif_config.h.ed \
+                && ed - tiffconf.h < ${filespath}/libtiff__tiffconf.h.ed \
+                && touch stamp-h1 && touch stamp-h2"
+    }
+}
+
 use_parallel_build  yes
 
 post-destroot {
@@ -61,23 +67,20 @@ post-destroot {
 }
 
 platform macosx {
-    if { ![variant_isset universal] } {
+    # Tiger does not have 64-bit OpenGL.
+    if {${os.major} > 8 || (![variant_isset universal] && ![string match *64* $build_arch])
+        || ([variant_isset universal] && ![string match *64* $universal_archs])} {
         configure.args-append   --with-apple-opengl-framework
-    } else {
-        # Tiger does not have 64-bit OpenGL.
-        if { ${os.major} > 8 } {
-            configure.args-append   --with-apple-opengl-framework
-        } else {
-            global merger_configure_args
-            array set merger_configure_args {
-                ppc  --with-apple-opengl-framework
-               i386  --with-apple-opengl-framework
-            }
-        }
     }
 }
 
 minimum_xcodeversions {9 3.1}
+
+variant jbig description {Enable JBIG support} {
+    depends_lib-append      port:jbigkit
+    configure.args-delete   --disable-jbig
+    configure.args-append   --enable-jbig
+}
 
 livecheck.type  regex
 livecheck.url   http://www.remotesensing.org/libtiff/
