Add license to darwinbuild
git-svn-id: https://svn.macports.org/repository/macports/trunk@69701 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/darwinbuild/Portfile
+++ b/dports/devel/darwinbuild/Portfile
@@ -8,6 +8,7 @@ version         19.1
 categories      devel
 platforms       darwin
 maintainers     wms
+license		BSD
 description     Darwinbuild is a set of tools that facilitate building the sources \
 		released by Apple.
 
