mod_wsgi: version 3.2, add license, add python27 variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@69702 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/mod_wsgi/Portfile
+++ b/dports/www/mod_wsgi/Portfile
@@ -3,9 +3,10 @@
 PortSystem 1.0
 
 name            mod_wsgi
-version         3.1
+version         3.2
 categories      www python
 platforms       darwin
+license         Apache
 maintainers     nomaintainer
 description     Python WSGI adapter module for Apache.
 long_description The mod_wsgi module is written in C code directly against \
@@ -16,9 +17,9 @@ mod_python or alternative FASTCGI/SCGI/CGI based solutions.
 
 homepage        http://www.modwsgi.org/
 master_sites    googlecode:modwsgi
-checksums       md5     f9aabdcd7a3f66a2319d10793477f9e9 \
-                sha1    4bfbfc07e6bb33df4eb7b78c4e65126d926441b8 \
-                rmd160  363e5f2fa2eb7f41472447b8ee91204f4118dd0a
+checksums       md5     7e4f7f443f562f21f61d1bd06defa1d8 \
+                sha1    227123f679f280d45639420fe2eeaa820f6a1cbc \
+                rmd160  2a0a0ef9716844c4999610e6adc207deaa89102c
 
 depends_lib     port:apache2
 
@@ -42,26 +43,33 @@ post-install {
 if {![variant_isset python24]
     && ![variant_isset python25]
     && ![variant_isset python26]
+    && ![variant_isset python27]
     && ![variant_isset python31]} {
     default_variants +python26
 }
 
-variant python24 conflicts python25 python26 python31 description {Use Python 2.4} {
+variant python24 conflicts python25 python26 python27 python31 description {Use Python 2.4} {
     depends_lib-append port:python24
     configure.args-append --with-python=${prefix}/bin/python2.4
 }
 
-variant python25 conflicts python24 python26 python31 description {Use Python 2.5} {
+variant python25 conflicts python24 python26 python27 python31 description {Use Python 2.5} {
     depends_lib-append port:python25
     configure.args-append --with-python=${prefix}/bin/python2.5
 }
 
-variant python26 conflicts python24 python25 python31 description {Use Python 2.6} {
+variant python26 conflicts python24 python25 python27 python31 description {Use Python 2.6} {
     depends_lib-append port:python26
     configure.args-append --with-python=${prefix}/bin/python2.6
 }
 
-variant python31 conflicts python24 python25 python26 description {Use Python 3.1} {
+variant python27 conflicts python24 python25 python26 python31 description {Use Python 2.7} {
+    depends_lib-append port:python27
+    configure.args-append --with-python=${prefix}/bin/python2.7
+}
+
+variant python31 conflicts python24 python25 python26 python27 description {Use Python 3.1} {
     depends_lib-append port:python31
     configure.args-append --with-python=${prefix}/bin/python3.1
 }
+
