gnuplot: avoid opportunistically linking against lua (or attempting to, unsuccessfully)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69704 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/gnuplot/Portfile
+++ b/dports/math/gnuplot/Portfile
@@ -58,7 +58,8 @@ configure.args	--with-readline=${prefix} \
 				--disable-wxwidgets \
 				--without-latex \
 				--without-tutorial \
-				--without-cairo
+				--without-cairo \
+				--without-lua
 
 configure.ccache	no
 
