gnuplot: add luaterm variant (#25538)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69705 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/gnuplot/Portfile
+++ b/dports/math/gnuplot/Portfile
@@ -75,6 +75,12 @@ variant wxwidgets description "Enable wxWidgets front-end" {
 	configure.args-append	--with-wx-config=${prefix}/bin/wx-config
 }
 
+variant luaterm description "Enable Lua terminal" {
+	depends_lib-append	port:lua
+	configure.args-delete	--without-lua
+	configure.args-append	--with-lua
+}
+
 variant tutorial description "Build the tutorial (requires a tex install)" {
 	depends_lib-append		bin:tex:texlive
 	configure.args-delete	--without-tutorial --without-latex
