--- a/dports/x11/xorg-server/Portfile
+++ b/dports/x11/xorg-server/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 
 name		xorg-server
+conflicts       xorg-server-devel
 set my_name	xorg-server
 version		1.8.2
 categories	x11 devel
