xorg-server and xorg-server-devel conflict
git-svn-id: https://svn.macports.org/repository/macports/trunk@69707 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server-devel/Portfile
+++ b/dports/x11/xorg-server-devel/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 
 name		xorg-server-devel
+conflicts       xorg-server
 set my_name	xorg-server
 version		1.8.99.904
 revision        1
