Add Xft2 dependency. (#25651)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69708 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/root/Portfile
+++ b/dports/science/root/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                root
 version             5.26.00b
-revision            5
+revision            6
 categories          science
 maintainers         gmail.com:mattiafrancescomoro
 license             LGPLv2.1
@@ -26,6 +26,7 @@ worksrcdir          root
 
 depends_lib         port:freetype \
                     port:pcre \
+                    port:Xft2 \
                     port:xpm \
                     port:zlib
 
