Update to version 10.1.0.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69710 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-twisted/Portfile
+++ b/dports/python/py25-twisted/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 PortGroup python25 1.0
 
 name			py25-twisted
-version			8.2.0
+version			10.1.0
 categories		python devel net
 maintainers		stechert akitada openmaintainer
 platforms		darwin
@@ -16,12 +16,12 @@ long_description	Twisted is an event-driven networking framework \
 				much more.
 
 homepage		http://www.twistedmatrix.com/
-master_sites		http://tmrc.mit.edu/mirror/twisted/Twisted/8.2/
+master_sites	http://tmrc.mit.edu/mirror/twisted/Twisted/[join [lrange [split ${version} .] 0 1] .]
 distname		Twisted-${version}
 use_bzip2		yes
-checksums           	md5     c85f151999df3ecf04c49a781b4438d2 \
-                    	sha1    ef5f475b8f38eafd9b83a325ce131fdf6af05255 \
-                    	rmd160  a942e6ee4c54d734111410b615754fbea0c9fb5e
+checksums           md5     04cca97506e830074cffc1965297da3f \
+                    sha1    ad5a6d60c0d0316bd1b95566fd3ddb598ddd52e6 \
+                    rmd160  a344f9c4de66fdea1c1ef13194f4d4ce9b778139
 
 depends_lib-append	port:py25-zopeinterface
 
