Make look more like py26-twisted.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69711 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-twisted/Portfile
+++ b/dports/python/py25-twisted/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
@@ -6,8 +7,8 @@ PortGroup python25 1.0
 name			py25-twisted
 version			10.1.0
 categories		python devel net
-maintainers		stechert akitada openmaintainer
 platforms		darwin
+maintainers		stechert akitada openmaintainer
 description		An event-based Python framework for internet applications
 long_description	Twisted is an event-driven networking framework \
 				written in Python. Twisted supports TCP, UDP, SSL/TLS, \
@@ -34,6 +35,6 @@ post-destroot {
         system "PYTHONPATH=${destroot}${python.pkgd} ${prefix}/bin/python2.5 ${portpath}/${filesdir}/getPlugins.py"
 }
 
-livecheck.type    regex
-livecheck.url     http://twistedmatrix.com/trac/wiki/Downloads
-livecheck.regex   {The current release is Twisted (\d+(?:\.\d+)*)}
+livecheck.type   regex
+livecheck.url    http://twistedmatrix.com/trac/wiki/Downloads
+livecheck.regex  "The current release is Twisted (\\d+(?:\\.\\d+)*)"
