--- a/dports/java/maven/Portfile
+++ b/dports/java/maven/Portfile
@@ -17,8 +17,7 @@ long_description	Maven is a Java project management and project comprehension \
 					metrics, and source  cross-references are all controlled by your POM.
 homepage			http://maven.apache.org/
 
-# FIXME: archive.apache.org can be removed when macports greater 1.6.0 is released
-master_sites		apache:maven/binaries http://archive.apache.org/dist/maven/binaries
+master_sites		apache:maven/binaries
 checksums       	md5 81a6b4393e550635efe19e95cea38718
 
 depends_build		bin:java:kaffe \
