add dependency on kdepimlibs4, #25653
git-svn-id: https://svn.macports.org/repository/macports/trunk@69715 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdenetwork4/Portfile
+++ b/dports/kde/kdenetwork4/Portfile
@@ -24,6 +24,7 @@ depends_lib-append  port:kdebase4-runtime \
                     port:qca \
                     path:lib/libspeex.dylib:speex \
                     port:libidn \
+                    port:kdepimlibs4 \
                     port:libotr
 depends_run-append  port:qca-ossl
 
