--- a/dports/devel/cmake/Portfile
+++ b/dports/devel/cmake/Portfile
@@ -6,6 +6,7 @@ PortGroup	muniversal 1.0
 
 name		cmake
 version		2.8.2
+revision	1
 set branch	[join [lrange [split ${version} .] 0 1] .]
 categories	devel
 maintainers	css
@@ -23,8 +24,9 @@ checksums       md5     8c967d5264657a798f22ee23976ff0d9 \
                 sha1    272003c2fe392b211ce3b5f895ad84da2ca603cf \
                 rmd160  079b7c8cb385c59b3713a3611d7a9482f7855fe5
 
-depends_lib     port:libidn
+depends_lib     port:libidn port:openssl
 
+configure.env   CMAKE_PREFIX_PATH=${prefix}
 configure.args	--mandir=/share/man --docdir=/share/doc/cmake --parallel=${build.jobs}
 patchfiles	patch-CMakeFindFrameworks.cmake.diff
 post-patch {
