lang/ruby186: upgrade to 1.8.6-p399, fix #25647 (build error with openssl 1.0.0)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69720 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby186/Portfile
+++ b/dports/lang/ruby186/Portfile
@@ -3,8 +3,8 @@
 PortSystem 1.0
 
 name			ruby186
-version			1.8.6-p388
-revision        1
+version			1.8.6-p399
+revision        0
 
 categories		lang ruby
 maintainers		kimuraw openmaintainer
@@ -18,14 +18,15 @@ long_description	Ruby is the interpreted scripting language for quick \
 					Note: this port conflicts with the ruby port, so you \
 					can have either that or this one active at one time.
 homepage		http://www.ruby-lang.org/
+license			Ruby/GPL
 master_sites	ruby:1.8
 use_bzip2		yes
 
 dist_subdir		ruby
 distname		ruby-${version}
-checksums		md5     f26cefbc8ab6728650ab9ae773d22bcb \
-				sha1    175e7f1571761e522e88cc8a8ed123f000c99c59 \
-				rmd160  9f451182ef4fb485109d96953e6af388151cadc8
+checksums		md5     f77c307cb72fb8808b0e85af5d05cefc \
+				sha1    4a7b5ec1ccbeb8c6c0c49c844471a5ee14cdaa98 \
+				rmd160  1c0bb41966c9f6011fa40b9de58ef95cb6610710
 
 platforms		darwin
 
@@ -45,9 +46,12 @@ patchfiles		patch-Makefile.in \
 # bug15528: TCPServer.open('localhost', 0) fails on some Mac
 # [ruby-core:21033]: The DRb code in drb.rb does not correctly deal with
 #                    multiple network families if they're present.
+# #25647: build failure with openssl 1.0.0
+#         patch from http://redmine.ruby-lang.org/issues/show/2022
 patchfiles-append \
 				patch-bug15528.diff \
-				patch-ruby_core21033.diff
+				patch-ruby_core21033.diff \
+				patch-bug25647.diff
 
 use_autoconf	yes
 
