fix hspell/hunspell confusion, #25643
git-svn-id: https://svn.macports.org/repository/macports/trunk@69721 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdelibs4/Portfile
+++ b/dports/kde/kdelibs4/Portfile
@@ -6,7 +6,7 @@ PortGroup           kde4   1.0
 
 name                kdelibs4
 version             4.4.5
-revision        1
+revision            2
 categories          kde kde4
 maintainers         snc sharky
 description         KDE4 core libraries
@@ -55,8 +55,7 @@ configure.args-append   ../${distname} \
                         -DWITH_Soprano=ON \
                         -DWITH_Avahi=ON \
                         -DKDE_DEFAULT_HOME=Library/Preferences/KDE \
-                        -DHSPELL_INCLUDE_DIR=${prefix}/include/hunspell/ \
-                        -DHSPELL_LIB_DIR=${prefix}/lib/ \
+                        -DWITH_HSPELL:BOOL=OFF \
                         -DPHONON_INCLUDE_DIR=${prefix}/libexec/qt4-mac/lib/phonon.framework/ \
                         -DLIBXSLT_INCLUDE_DIR=${prefix}/include/ \
                         -DLIBXSLT_LIBRARIES=${prefix}/lib/libxslt.dylib \
