New upstream final release of 2.8.0.  Woot!
git-svn-id: https://svn.macports.org/repository/macports/trunk@69723 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/scala28/Portfile
+++ b/dports/lang/scala28/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            scala28
-version         0.2.8.0.RC7
+version         2.8.0
 categories      lang java
 maintainers     openmaintainer brett blair
 description     The Scala Programming Language
@@ -18,11 +18,11 @@ homepage        http://www.scala-lang.org/
 platforms       darwin
 
 master_sites    ${homepage}downloads/distrib/files/
-distname        scala-2.8.0.RC7
+distname        scala-2.8.0.final
 extract.suffix  .tgz
-checksums       md5 8d1622182ebf541c8b61956ae43f8178 \
-                sha1 302aafca4d5a6406b0d10398738fd1799ae196d5 \
-                rmd160 9e04e90ba240c271e156ee4dad180e2e81d2b80f
+checksums       md5 f250015d178f05b08bd53baba55c5d46 \
+                sha1 9f06c56718b43a14e8dff412f532e3bfe36f3128 \
+                rmd160 647774d2eea5625796ecf0893d55e2081940afb7
 
 use_configure   no
 build           {}
