gimp-lqr-plugin: update to version 0.7.1, update master_sites.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69724 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp-lqr-plugin/Portfile
+++ b/dports/graphics/gimp-lqr-plugin/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            gimp-lqr-plugin
-version         0.6.1
+version         0.7.1
 maintainers     devans
 categories      graphics
 platforms       darwin
@@ -18,12 +18,12 @@ long_description \
 
 universal_variant no
 
-master_sites    http://liquidrescale.wikidot.com/local--files/en:download-page/
+master_sites    http://liquidrescale.wikidot.com/local--files/en:download-page-sources/
 use_bzip2       yes
 
-checksums       md5     f5f15814904d7c812eca60cbb2fc6385 \
-                sha1    f202700ffe7981de14a4b69493903239dd963a54 \
-                rmd160  42d61edbbd1446570f936daab5cab2c485f2c306
+checksums       md5     d7ee28b16bdbd9f46bc9f21cf5deb487 \
+                sha1    cc7ae00ae4ba144e3f5bab6cc62f43e12cdee3f4 \
+                rmd160  d445204a295e4f9d5a5fc0f5fb7081c60bfc8a43
 
 depends_lib     port:liblqr port:gimp2
 
