--- a/dports/graphics/jgraph/Portfile
+++ b/dports/graphics/jgraph/Portfile
@@ -25,10 +25,15 @@ master_sites        http://www.cs.utk.edu/~plank/plank/jgraph/
 checksums           md5 f73fa282f7fe6cf562e08c70da7bfb65 \
                     sha1 4ea864f7bca8cf03217fc57a745753092493ddfa \
                     rmd160 b575acd5fa8f99c8433e81128619a7247881c306
+
+supported_archs     ppc i386
 patchfiles          patch-jgraph.h.diff \
                     patch-list.c.diff \
                     patch-makefile.diff \
                     patch-token.c.diff
+post-patch {
+    reinplace s|@@CC@@|${configure.cc}| ${worksrcpath}/makefile
+}
 
 post-extract {
     # The tarball comes with object files!
