--- a/dports/math/gnuplot/Portfile
+++ b/dports/math/gnuplot/Portfile
@@ -42,7 +42,7 @@ depends_lib		port:expat \
 
 platform darwin {
 	depends_lib-append		port:aquaterm
-	configure.cflags-append	-DDEFAULTTERM="aqua"
+	configure.cflags-append	-DDEFAULTTERM='"aqua"'
 }
 
 minimum_xcodeversions {9 3.1}
