Corrected master_sites .
git-svn-id: https://svn.macports.org/repository/macports/trunk@69733 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca-tls/Portfile
+++ b/dports/devel/qca-tls/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem			1.0
@@ -14,7 +15,7 @@ long_description \
 platforms			darwin
 
 homepage			http://delta.affinix.com/qca/
-master_sites		${homepage}
+master_sites		http://delta.affinix.com/download/qca
 use_bzip2			yes
 
 checksums			md5 886b1f60fc31de3b1a0bd93281e27b73
