--- a/dports/kde/amarok/Portfile
+++ b/dports/kde/amarok/Portfile
@@ -21,15 +21,12 @@ checksums           md5 6679adaf5cc757b1515a9f03cdcb6066 \
 		    sha1 00a596384df8d155b91b40bb2484ec0a7f51da80 \
 		    rmd160 70e581bd681361d7837f1ed295191174e92e9f8f
 
+depends_build       port:pkgconfig
 depends_lib-append  port:kdebase4-runtime port:kdelibs4 \
                     port:qtscriptgenerator port:liblastfm \
                     port:taglib port:taglib-extras \
                     port:loudmouth port:qca port:libmtp port:libgpod \
                     path:bin/mysql_config5:mysql5
-
-#patchfiles          patch-src-app-mac.patch
-#patch.dir           ${workpath}/${distname}
-#patch.pre_args      -p1
 
 pre-configure {
     if {![file exists ${prefix}/lib/mysql5/mysql/libmysqld.a]} {
@@ -50,19 +47,17 @@ post-patch {
 compiler.cpath        ${prefix}/include/libusb-legacy:${compiler.cpath}
 compiler.library_path ${prefix}/lib/libusb-legacy:${compiler.library_path}
 
-configure.env           QTDIR=${prefix}/libexec/qt4-mac
+set qt_dir ${prefix}/libexec/qt4-mac
+configure.pkg_config_path-append ${qt_dir}/lib/pkgconfig
+configure.env           QTDIR=${qt_dir}
 configure.args-append	../${distname}
 
 post-configure {
     # for some reason, these files #include from 'Phonon',
     # while qt4-mac uses 'phonon'; this does make a difference on
     # case-sensitive file systems.
-    foreach file {EngineController.cpp EngineController.h \
-            context/applets/videoclip/CustomVideoWidget.h \
- 	    context/applets/videoclip/VideoclipApplet.cpp \
-	    context/applets/videoclip/VideoclipApplet.h \
-	    context/engines/current/CurrentEngine.cpp \
-	    core/engine/EngineObserver.h} {
-	reinplace "s|Phonon\\/|phonon\\/|" ${workpath}/${distname}/src/${file}
+    foreach file [exec grep -rl "#include\[ \]*<\[Pp\]honon" \
+                      ${workpath}/${distname}] {
+        reinplace "s|Phonon\\/|phonon\\/|" ${file}
     }
 }
