kdegraphics3:  - Removed a dependency on imlib(gtk1).  - kuickdraw is no longer installed by default.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69737 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdegraphics3/Portfile
+++ b/dports/kde/kdegraphics3/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 
 name            kdegraphics3
 version         3.5.10
-revision        4
+revision        5
 set kdeadmin    kde-admindir-1502
 categories      kde kde3
 maintainers     nomaintainer
@@ -28,7 +28,6 @@ dist_subdir     kde3
 depends_build   port:autoconf263 \
                 port:unsermake
 depends_lib     port:fribidi \
-                port:imlib \
                 port:kdebase3 \
                 port:lcms \
                 port:libusb-compat \
@@ -42,7 +41,12 @@ checksums       ${distname}.tar.bz2 md5 a09094b5357d8cd5c49d45b5d291dcfe \
                 ${kdeadmin}.tar.bz2 md5 92a60282c1d81f38835ce7d495255cc3
 
 extract.only    ${distname}.tar.bz2
-post-extract    { system "cd ${worksrcpath} && bzcat -dc ${distpath}/${kdeadmin}.tar.bz2 | tar xf -" }
+post-extract    {
+                    system "cd ${worksrcpath} && bzcat -dc ${distpath}/${kdeadmin}.tar.bz2 | tar xf -"
+                    if (![variant_isset with_imlib]) {
+                        delete ${worksrcpath}/kuickshow
+                    }
+                }
 
 patchfiles      kdegraphics3.patch dp01.patch
 patch           {
@@ -73,7 +77,7 @@ post-patch      {
                 }
 }
 
-configure.args  --without-kamera --with-imlib-config=${prefix}/bin --with-distribution='MacPorts/Mac OS X' --without-arts
+configure.args  --without-kamera --with-distribution='MacPorts/Mac OS X' --without-arts
 
 use_configure       no
 
@@ -88,5 +92,10 @@ post-destroot   {
 }
 
 universal_variant       no
+
+variant with_imlib description {Build and install kuickshow} {
+    depends_lib-append      port:imlib
+    configure.args-append   --with-imlib-config=${prefix}/bin
+}
 
 livecheck.type  none
