kdegraphics3: rename with_imlib variant to just imlib
git-svn-id: https://svn.macports.org/repository/macports/trunk@69738 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdegraphics3/Portfile
+++ b/dports/kde/kdegraphics3/Portfile
@@ -43,7 +43,7 @@ checksums       ${distname}.tar.bz2 md5 a09094b5357d8cd5c49d45b5d291dcfe \
 extract.only    ${distname}.tar.bz2
 post-extract    {
                     system "cd ${worksrcpath} && bzcat -dc ${distpath}/${kdeadmin}.tar.bz2 | tar xf -"
-                    if (![variant_isset with_imlib]) {
+                    if (![variant_isset imlib]) {
                         delete ${worksrcpath}/kuickshow
                     }
                 }
@@ -93,7 +93,7 @@ post-destroot   {
 
 universal_variant       no
 
-variant with_imlib description {Build and install kuickshow} {
+variant imlib description {Build and install kuickshow} {
     depends_lib-append      port:imlib
     configure.args-append   --with-imlib-config=${prefix}/bin
 }
