Portfile cleanup of commented out lines.  Simplified ${destroot}${qt_dir} -> ${destroot_qt} in post-destroot.  Corrected select check for variant 'demos' name.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69739 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -8,10 +8,8 @@ set select_group    qt4
 set select_branch   mac
 set select_port     ${select_group}_select
 set select_name     ${select_group}-${select_branch}
-# select.group        ${select_group}
 
 name                ${select_name}
-#conflicts           kdelibs3 kdelibs4 xmlrpcxx
 version             4.6.3
 revision            3
 categories          aqua
@@ -177,11 +175,11 @@ variant raster description {Use raster graphics system by default} {
     configure.args-append -graphicssystem raster
 }
 
-variant no_demos description {Do not build demo programs} {
+variant no_demos description {Do not build demos} {
    configure.args-append -nomake demos
 }
 
-variant no_examples description {Do not build example programs} {
+variant no_examples description {Do not build examples} {
    configure.args-append -nomake examples
 }
 
@@ -254,6 +252,8 @@ post-patch {
 }
 
 post-destroot {
+    set destroot_qt ${destroot}${qt_dir}
+
     # Fix .pc and .prl files by changing ${destroot}/lib to ${qt_dir}/lib
     foreach fixfile [glob -nocomplain -directory ${destroot} ${qt_dir}/lib/pkgconfig/* ${qt_dir}/lib/*.prl ${qt_dir}/lib/*/*.prl ${qt_dir}/share/${dirname}/demos/shared/*.prl] {
         reinplace  \
@@ -264,13 +264,14 @@ post-destroot {
     # Install documentation.
     foreach doc { INSTALL LGPL_EXCEPTION.txt LICENSE.GPL3 LICENSE.LGPL README } {
         xinstall -c -m 644 ${worksrcpath}/${doc} \
-            ${destroot}${qt_dir}/share/doc/${name}
+            ${destroot_qt}/share/doc/${name}
     }
 
     # Fix includes
-    # (1) Remove include/Qt ; it should never be used
-    if {[file exists ${destroot}${qt_dir}/include/Qt]} {
-        delete ${destroot}${qt_dir}/include/Qt
+    # (1) Remove include/Qt ; it should never be used in Qt 4 or newer
+    # it is there for legacy purposes (for Qt 3 compatibility)
+    if {[file exists ${destroot_qt}/include/Qt]} {
+        delete ${destroot_qt}/include/Qt
     }
 
     # (2) remove from ${qt_dir}/include/FOO, for each FOO in the
@@ -282,13 +283,13 @@ post-destroot {
         # 1: retrieve the framework name
         set tfm [lindex [split [lindex ${tmp} [expr [llength ${tmp}] - 1]] .] 0]
         # 2: remove the include directory, if it exists
-        if {[file exists ${destroot}${qt_dir}/include/${tfm}] } {
+        if {[file exists ${destroot_qt}/include/${tfm}] } {
             # if it exists
-            delete ${destroot}${qt_dir}/include/${tfm}
+            delete ${destroot_qt}/include/${tfm}
         }
         # 3: link into the framework's Headers
         ln -s ${qt_dir}/lib/${tfm}.framework/Headers \
-            ${destroot}${qt_dir}/include/${tfm}
+            ${destroot_qt}/include/${tfm}
     }
 
     # install the select file
@@ -305,12 +306,12 @@ post-destroot {
         reinplace "/debug/ c\\\n-\n" \
             ${destroot}${prefix}/etc/select/${select_group}/${select_name}
     }
-    if {[variant_isset no_demo]} {
+    if {[variant_isset no_demos]} {
         # remove select entries for demo
         reinplace "/demo/ c\\\n-\n" \
             ${destroot}${prefix}/etc/select/${select_group}/${select_name}
 
-        # special case: if no examples and no debug,
+        # special case: if no examples and no demos,
         if {[variant_isset no_examples]} {
             # remove select entry for share/qt4-mac
             reinplace "/share\\/qt4-mac/ c\\\n-\n" \
