Move 'qt4_select' to all around dependency.  Move to 'fast' Makefile creation, which should reduce build time.  Correct description.  Bump revision to get correct select file install for those using variant "no_demos".
git-svn-id: https://svn.macports.org/repository/macports/trunk@69741 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -11,7 +11,7 @@ set select_name     ${select_group}-${select_branch}
 
 name                ${select_name}
 version             4.6.3
-revision            3
+revision            4
 categories          aqua
 platforms           macosx
 maintainers         michaelld
@@ -20,8 +20,9 @@ homepage            http://qt.nokia.com/
 description         Qt Tool Kit (Native Aqua Version)
 long_description    \
     Qt is a cross-platform application and UI framework for writing \
-    cross-platform GUI applications. This version uses the native Aqua UI. \
-    For a X11 version, see qt4-x11\[-devel\].
+    cross-platform GUI applications. This port is for Qt version 4 \
+    using the native Aqua UI. For X11 UI versions, see qt3-x11 or \
+    qt4-x11\[-devel\].
 
 master_sites        trolltech
 distname            qt-everywhere-opensource-src-${version}
@@ -29,10 +30,11 @@ checksums           md5     5c69f16d452b0bb3d44bc3c10556c072 \
                     sha1    1c18a564df9296c7cb0e0dedde40b9843e1b30e8 \
                     rmd160  ceb3ca78263d0d9cdf92fef903e30c0026db6bff
 
-depends_build       port:pkgconfig port:${select_port}
+depends_build       port:pkgconfig
 
 depends_lib         port:zlib port:dbus port:openssl port:sqlite3 \
-                    port:tiff port:libpng port:libmng port:jpeg
+                    port:tiff port:libpng port:libmng port:jpeg \
+                    port:${select_port}
 
 # Test for Precompiled-headers support requires a C++ compiler,
 # but configure calls it, by default, with a C compiler.
@@ -104,6 +106,7 @@ configure.args                                            \
     -system-sqlite                                        \
     -openssl-linked                                       \
     -dbus-linked                                          \
+    -fast                                                 \
     -arch            \"${build_arch}\"
 
 # Stop configure script from searching for SQL Drivers
@@ -307,7 +310,7 @@ post-destroot {
             ${destroot}${prefix}/etc/select/${select_group}/${select_name}
     }
     if {[variant_isset no_demos]} {
-        # remove select entries for demo
+        # remove select entries for demos
         reinplace "/demo/ c\\\n-\n" \
             ${destroot}${prefix}/etc/select/${select_group}/${select_name}
 
