mystonline-bootstrap is noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@69742 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/mystonline-bootstrap/Portfile
+++ b/dports/games/mystonline-bootstrap/Portfile
@@ -5,6 +5,7 @@ PortSystem                  1.0
 name                        mystonline-bootstrap
 set my_name                 mystonline
 version                     2010
+revision                    1
 platforms                   darwin
 categories                  games x11
 maintainers                 ryandesign
@@ -16,6 +17,7 @@ set launcher_exe            UruLauncher.exe
 set launcher_version        1.893
 distname                    ${launcher_exe}-${launcher_version}
 extract.mkdir               yes
+supported_archs             noarch
 
 description                 Myst Online: URU Live Again
 
@@ -48,7 +50,5 @@ post-activate {
         copy ${bootstrap_dir}/${launcher_exe} ${assets_dir}
     }
 }
-
-universal_variant           no
 
 livecheck.type              none
