--- a/dports/games/mystonline-wine/Portfile
+++ b/dports/games/mystonline-wine/Portfile
@@ -23,6 +23,8 @@ depends_build               port:winetricks
 depends_run                 path:bin/wine:wine-devel \
                             port:mystonline-bootstrap
 
+depends_skip_archcheck      wine-devel
+
 set libexec_dir             ${prefix}/libexec/${name}
 set share_dir               ${prefix}/share/${my_name}
 set bootstrap_dir           ${share_dir}/bootstrap
