xorg-server: Revision bumping.  Was left out of the last commit on accident.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69744 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server/Portfile
+++ b/dports/x11/xorg-server/Portfile
@@ -6,6 +6,7 @@ name		xorg-server
 conflicts       xorg-server-devel
 set my_name	xorg-server
 version		1.8.2
+revision        1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	The X.org / Xquartz X server.
