mystonline-wine: no longer use wineprefixcreate since it doesn't exist anymore; see #25689
git-svn-id: https://svn.macports.org/repository/macports/trunk@69746 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/mystonline-wine/Portfile
+++ b/dports/games/mystonline-wine/Portfile
@@ -50,8 +50,13 @@ post-patch {
 use_configure               no
 
 build {
-    # Create the wine prefix
-    system "WINEPREFIX=${worksrcpath}/wineprefix ${prefix}/bin/wineprefixcreate -w"
+    # If winetricks needs to download any files, put them where the other distfiles are
+    if {![file exists ${distpath}/winetrickscache]} {
+        ln -s . ${distpath}/winetrickscache
+    }
+    
+    # Create the wine prefix and enable font antialiasing
+    system "WINEPREFIX=${worksrcpath}/wineprefix HOME=${distpath} ${prefix}/bin/winetricks -q fontsmooth-rgb"
     
     # Delete any temporary directory definitions; use the default C:\windows\temp
     reinplace -E {/^"TE?MP"=/d} ${worksrcpath}/wineprefix/user.reg
@@ -60,14 +65,6 @@ build {
     # (e.g. by the PhysX installer) get cleaned up by Mac OS X as usual
     delete ${worksrcpath}/wineprefix/drive_c/windows/temp
     ln -s /tmp ${worksrcpath}/wineprefix/drive_c/windows/temp
-    
-    # If winetricks needs to download any files, put them where the other distfiles are
-    if {![file exists ${distpath}/winetrickscache]} {
-        ln -s . ${distpath}/winetrickscache
-    }
-    
-    # Enable font antialiasing
-    system "WINEPREFIX=${worksrcpath}/wineprefix HOME=${distpath} ${prefix}/bin/winetricks -q fontsmooth-rgb"
     
     # Delete dosdevices -- it might contain references to transient disks
     # the user happens to have mounted, and wine will recreate it anyway
